--- a/content/wp/2018-11-15-newzealand-38.md
+++ b/content/wp/2018-11-15-newzealand-38.md
@@ -1,22 +1,10 @@
 ---
-title: ファンガレイの街でお昼寝してたら2時間経ってた一日の日記
+title: ファンガレイの街でお昼寝してた2時間も経ってた一日の日記
 author: ひろたつ
 type: post
 date: 2018-11-15T12:16:49+00:00
 url: /newzealand-38/
 thumbnail: 'images/uploads/2018/11/1214d98046b8d43e5cecd3edc96b9a9f.png?fit=304%2C171&ssl=1'
-views:
-- 168
-bzb_meta_keywords:
-- ニュージーランド,WWOOF,ホームステイ
-bzb_meta_robots:
-- 'a:2:{i:0;s:0:"";i:1;s:0:"";}'
-bzb_post_layout:
-- left-content
-bzb_cta:
-- 'a:6:{s:9:"check_cta";s:4:"none";s:9:"org_title";s:0:"";s:9:"org_image";s:0:"";s:11:"org_content";s:0:"";s:15:"org_button_text";s:0:"";s:14:"org_button_url";s:0:"";}'
-bzb_checklists:
-- 'a:1:{i:0;s:0:"";}'
 categories:
 - ゼロ円ワーホリ
 tags:
@@ -24,8 +12,9 @@ tags:
 - ニュージーランド
 - ホームステイ
 - ワナナキ
-
 ---
+
+
 住所不定無職で**ニュージーランド**を放浪中の**ひろたつ**です。
 
 **WWOOF**やhelpxを使ってホームステイ先を転々としながら生活しています。
@@ -36,7 +25,6 @@ tags:
 
 ニュージーランドに興味がある人も無い人もぜひ読んでください。m(_ _)m
 
-<!--more-->
 
 <div id="toc_container" class="toc_transparent no_bullets">
 <p class="toc_title">
